test/expected/regression-http-close.txt
/scripts/regression-http-close.js:20
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:20:15)
    at ____________________
    at IncomingMessage.end (/scripts/regression-http-close.js:19:14)
    at ____________________
    at ____________________
    at ClientRequest.get (/scripts/regression-http-close.js:16:9)
    at ____________________
    at ____________________
    at Server.listen (/scripts/regression-http-close.js:15:8)
    at ____________________
    at ____________________
    at ____________________
    at Object.<anonymous> (/scripts/regression-http-close.js:11:4)
